--- a/styleguide/base.css
+++ b/styleguide/base.css
@@ -23,12 +23,25 @@ html {
   --h2-size: calc(var(--h3-size)*var(--scale));
   --h1-size: calc(var(--h2-size)*var(--scale));
   --small-text-size: calc(var(var(--base-size)) / var(var(--scale)));
+  --font: "Poppins", sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: var(--lime-color)
+}
+a:hover{
+  color: var(--cyan-color);
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: var(--font);
   font-weight: 400;
   line-height: 1.75;
+  background-color: var(--teal-color);
+  color: var(--white-color);
+  padding: 0;
+  margin: 0;
 }
 
 
@@ -89,4 +102,11 @@ small, .text_small {font-size: var(--small-text-size);}
 }
 .black{
   background-color: var(--black-color);
+}
+.club {
+  font-size: var(--h5-size);
+}
+img {
+  width: 100%;
+  max-width: 50rem;
 }
