--- a/easy-design/base.css
+++ b/easy-design/base.css
@@ -136,3 +136,26 @@
     color: var(--lime);
   }
   
+  .reviews__list-item{
+    text-align: center;
+  }
+
+  .list-item__img {
+    width: 60%;
+    max-width: 500px;
+  }
+
+  .reviews__list-item .star{
+    width: 20px;
+    height: 20px;
+  }
+  .reviews__list-item h6 {
+    margin-top: .5rem;
+    margin-bottom: 3rem;
+  }
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
