--- a/easy-design/base.css
+++ b/easy-design/base.css
@@ -1,3 +1,4 @@
+@layer base {
 :root {
     --base-size: 1rem;
     --scale: 1.25;
@@ -97,23 +98,22 @@
   ul li{
     list-style: none;
   }
+}
+
+@layer header{
   .header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .header a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 40%;
     max-width: 250px;
+    margin: 0 auto;
   }
   .header .header__img{
     width: 100%;
     margin: 0;
     padding: 1rem 0;
   }
+}
+
+
   .opening-img{
     display: flex;
     justify-content: center;
