--- a/easy-design/base.css
+++ b/easy-design/base.css
@@ -113,7 +113,7 @@
   }
 }
 
-
+@layer opening-section{
   .opening-img{
     display: flex;
     justify-content: center;
@@ -122,6 +122,8 @@
     width: 60%;
     max-width: 500px;
   }
+}
+@layer tour{
   .main {
     text-align: center;
   }
@@ -135,16 +137,17 @@
   .tour-list-item__place{
     color: var(--lime);
   }
-  
+}
+@layer reviews{
   .reviews__list-item{
     text-align: center;
   }
-
+  
   .list-item__img {
     width: 60%;
     max-width: 500px;
   }
-
+  
   .reviews__list-item .star{
     width: 20px;
     height: 20px;
@@ -153,9 +156,11 @@
     margin-top: .5rem;
     margin-bottom: 3rem;
   }
-  .footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
